# chat-chart

./: .env.example  .gitignore  Dockerfile  README.md  database.sqlite  docker-compose.yml  pyproject.toml
src/: main.py
src/chat_chart/: config.py  container.py
src/chat_chart/base/: api_router.py
src/chat_chart/llm/: entities.py  services.py
src/chat_chart/managers/: api_manager.py  database_manager.py
src/chat_chart/pollution/: api_router.py  entities.py  orm.py  repositories.py  schemas.py  services.py
src/templates/: home.html  result.html
static/css/: main.css  results.css
ui/: index.html  result.html
ui/css/: main.css  results.css
