[tool.poetry]
name = "chat-chart"
version = "0.1.0"
description = ""
authors = ["Monireh Yousefi <yousefi7391@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.108.0"
uvicorn = "^0.25.0"

pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

aiosqlite = "^0.19.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}

openai = "^1.6.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.6"
sqlparse = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
